--- a/src/styles/components/Header.css
+++ b/src/styles/components/Header.css
@@ -23,21 +23,3 @@
   justify-content: center;
   align-items: center;
 }
-
-/* .slide-right {
-  width: 100%;
-  overflow: hidden;
-  margin-left: 300px;
-  max-width: 500px
-}
-
-.slide-right h1 {
-  animation: 2s slide-right 2s forwards;
-    transform:translateX(-100%);
-}
-
-@keyframes slide-right {
-  to {
-    transform:translateX(0);
-  }
-} */
